Fixed spacing for welcome page, media, desktops, tablets.

--- a/src/App.css
+++ b/src/App.css
@@ -160,34 +160,56 @@ p.danger {
   transform: translate(-50%, -50%); /* Adjust based on the element's size */
   color: #fff;
   text-align: center;
-  /* bac */
 }
 
-/* .welcome-text-section {
-  left: 40%;
-} */
+.welcomeOverlayCover {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(to bottom, #2a272a, #4b4a54);
+  opacity: 0.8;
+}
 
 #welcomePageTagline {
   position: relative;
   padding-top: 6.25rem;
-  padding-right: 54.688rem;
-  padding-left: 3.125rem;
-  padding-bottom: 15.938rem;
-  text-align: right;
-  font-weight: 500;
-  letter-spacing: 0.113rem;
-  font-size: 5.938rem;
-  margin-top: 1.25rem;
-  margin-bottom: 3.125rem;
+  /* padding-right: 0.5rem; */
+  /* padding-left: rem; */
+  padding-bottom: 10rem;
+  text-align: center;
+  font-size: 3rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 430px) {
+  #welcomePageTagline {
+    padding-top: 2rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    padding-bottom: 11rem;
+    font-size: 2rem; /* Adjusted font size for readability on mobile */
+    text-align: center;
+  }
+
+  .background-video {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 960%;
+    height: 100%;
+  }
+}
+
+/* Media query for tablets */
+@media (min-width: 768px) {
   #welcomePageTagline {
     padding-top: 2rem; /* Reduced padding */
-    padding-right: 1.5rem; /* Adjusted for narrower screens */
-    padding-left: 1.5rem;
-    padding-bottom: 5rem; /* Reduced padding */
-    font-size: 2rem; /* Adjusted font size for readability on mobile */
+    position: relative;
+    padding-left: 2.5rem;
+    font-size: 4rem; /* Adjusted font size for readability on mobile */
     text-align: center; /* Optionally center text for mobile */
   }
 }
@@ -235,6 +257,7 @@ nav.navbar .navbar-nav .nav-link.navbar-link {
   color: #fff !important;
   letter-spacing: 0.8px;
   padding: 0 25px;
+  padding-top: 9px;
   font-size: 18px;
   opacity: 0.75;
 }
@@ -595,7 +618,7 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   max-width: 95%;
 }
 .project .nav.nav-pills {
-  width: 72%;
+  width: 100%;
   margin: 0 auto;
   border-radius: 50px;
   background-color: rgb(255 255 255 / 10%);
